fixed weird side scrolling bug on Tenzies project page for having too big of a title

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -184,9 +184,9 @@
 
 /* Media Query for Mobile Devices */
 @media (max-width: 575px) {
+
     .content_container {
         grid-template-columns: 1fr;
-
         grid-template-areas: 'first'
         'second';
     }
@@ -196,6 +196,12 @@
         margin-top: 10px;
         width: 8vw;
         height: 8vw;
+    }
+
+    .hero_section_video {
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
     }
 
     .hero_subsection_container {
@@ -234,6 +240,11 @@
         color:#747474;
     }
 
+    .hero_section_video {
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+    }
 
     .wrapper {
         margin-left: .5rem;
